--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -55,5 +55,10 @@ spring:
     username: user
     password: password
     connection-timeout: 5s
+  security:
+    oauth2:
+      resourceserver:
+        jwt:
+          issuer-uri: http://localhost:8080/realms/MdBookshop
 md:
   catalog-service-uri: "http://localhost:9001"
