--- a/k8s/deployment.yml
+++ b/k8s/deployment.yml
@@ -35,3 +35,5 @@ spec:
               value: r2dbc:postgresql://md-postgres/mddb_order
             - name: SPRING_FLYWAY_URL
               value: jdbc:postgresql://md-postgres/mddb_order
+            - name: SPRING_SECURITY_OAUTH2_RESOURCESERVER_JWT_ISSUER_URI
+              value: http://md-keycloak/realms/MdBookshop
