--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -60,5 +60,17 @@ spring:
       resourceserver:
         jwt:
           issuer-uri: http://localhost:8080/realms/MdBookshop
+management:
+  endpoints:
+    web:
+      exposure:
+        include: health
+  endpoint:
+    health:
+      show-details: always
+      show-components: always
+      probes:
+        enabled: true
+
 md:
   catalog-service-uri: "http://localhost:9001"
