--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -64,13 +64,22 @@ management:
   endpoints:
     web:
       exposure:
-        include: health
+        include: health, prometheus
   endpoint:
     health:
       show-details: always
       show-components: always
       probes:
         enabled: true
+  metrics:
+    tags:
+      application: ${spring.application.name}
 
+logging:
+  pattern:
+    level: "%5p [${spring.application.name},%X{trace_id},%X{span_id}]"
+
+info:
+  system: Md Bookshop
 md:
   catalog-service-uri: "http://localhost:9001"
