--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -60,20 +60,6 @@ spring:
       resourceserver:
         jwt:
           issuer-uri: http://localhost:8080/realms/MdBookshop
-management:
-  endpoints:
-    web:
-      exposure:
-        include: health, prometheus
-  endpoint:
-    health:
-      show-details: always
-      show-components: always
-      probes:
-        enabled: true
-  metrics:
-    tags:
-      application: ${spring.application.name}
 
 logging:
   pattern:
@@ -81,5 +67,28 @@ logging:
 
 info:
   system: Md Bookshop
+
+management:
+  endpoints:
+    web:
+      exposure:
+        include: configprops, env, flyway, health, heapdump, info, loggers, mappings, prometheus
+  endpoint:
+    health:
+      show-details: always
+      show-components: always
+      probes:
+        enabled: true
+  info:
+    env:
+      enabled: true
+    java:
+      enabled: true
+    os:
+      enabled: true
+  metrics:
+    tags:
+      application: ${spring.application.name}
+
 md:
   catalog-service-uri: "http://localhost:9001"
